Fix an overflow issue on forms

--- a/ui/client-react/src/components/QBForm/qbform.scss
+++ b/ui/client-react/src/components/QBForm/qbform.scss
@@ -18,6 +18,9 @@ $edit-field-padding: 5px;
             top: 4px;
         }
     }
+    .qbPanelBody {
+        overflow: hidden;
+    }
     &.closed {
         .qbPanelHeader {
             // if the section doesnt have a header, when its collapsed the height should be same as others
@@ -30,9 +33,6 @@ $edit-field-padding: 5px;
         }
     }
     .fieldRow {
-
-        padding: 5px 0;
-
         td {
             vertical-align:top;
             padding-bottom: 25px;
@@ -101,7 +101,7 @@ $edit-field-padding: 5px;
             width: inherit;
         }
         .checkbox {
-            margin-top: $edit-field-padding;
+            top: $edit-field-padding;
         }
     }
     [type="text"].input, textarea.cellEdit {
